[add] completes utils testing

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.24.3",
+    "@testing-library/user-event": "^12.1.7",
     "@types/jest": "^26.0.14",
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.11",
